@@ -153,7 +153,7 @@
 
 			$flags = 0;
 			
-			if (!is_scalar($value)) {
+			if (!is_scalar($value) || $value === Cache::NOT_FOUND) {
 				$packed = serialize($value);
 				$flags |= 1;
 
