@@ -104,8 +104,8 @@
 		
 		public function queryRaw($queryString)
 		{
-			// echo $queryString.'<hr>'; flush();
-			// error_log($queryString);
+			//	echo $queryString.'<hr>'; flush();
+			//	error_log($queryString);
 			try {
 				return pg_query($this->link, $queryString);
 			} catch (BaseException $e) {
